Change SerializableQuestion: removed metadata